# TorchMoon

./: .gitignore  pyproject.toml  requirements.txt  torchmoon.yml
configs/callbacks/: default.yaml
configs/datamodule/: craterdata.yaml
configs/debug/: profiler.yaml
configs/hparams_search/: optuna.yaml
configs/logger/: tensorboard.yaml  wandb.yaml
configs/trainer/: ddp.yaml  default.yaml
torchmoon/: __main__.py  hyperparameter.py  logger.py  training.py
torchmoon/datamodules/: deepcraterdata.py
torchmoon/model/: cratervnet.py  deepmoon.py
